# Creatio

./: .gitignore  CMakeLists.txt  README.md  main.cpp
asset/shader/: default.frag  default.vert
display/render/: Camera.h
display/texture/: TextureMap.cpp  TextureMap.h
kernel/application/: Creatio.cpp  Creatio.h
kernel/state/: StateMachine.cpp  StateMachine.h
logging/: CrashCause.cpp  CrashCause.h  CrashLog.cpp
registry/: IProperty.cpp  IProperty.h  IRegistry.cpp
registry/item/: Item.cpp  Item.h  ItemProperty.cpp  ItemProperty.h
src/: CMakeLists.txt
src/block/: block.h  blockstate.cpp  blockstate.h
src/config/: settings.cpp  settings.h
src/creatio/: application.cpp  application.h
src/display/: CMakeLists.txt
src/display/render/: RenderChunk.cpp  RenderChunk.h
src/display/texture/: TextureMap.h  Textures.h
src/kernel/: CMakeLists.txt
src/kernel/application/: Creatio.cpp  Creatio.h  Window.cpp  Window.h
src/kernel/state/: EmptyState.cpp  EmptyState.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h
src/logging/: CMakeLists.txt  CrashCause.cpp  CrashCause.h  CrashLog.cpp  CrashLog.h
src/registry/: CMakeLists.txt  IRegistry.cpp  IRegistry.h
src/registry/block/: Block.cpp  Block.h  Blocks.h
src/render/: camera.cpp  camera.h  texture.cpp  texture.h
src/render/shader/: shader.cpp  shader.h
src/util/: CMakeLists.txt  input.cpp  input.h  logging.cpp  logging.h
src/util/math/: BlockPos.cpp  BlockPos.h  Direction.cpp  Direction.h  Vec3f.cpp  Vec3f.h  blockpos.cpp  blockpos.h  facing.cpp  facing.h  hashing.cpp  hashing.h
src/world/: BlockState.cpp  BlockState.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  chunk.cpp  chunk.h  world.cpp  world.h
util/math/: BlockPos.cpp  Vec3f.cpp  Vec3f.h
util/struct/: Singleton.cpp  Singleton.h
